Fix spacing on last page on mobile+

--- a/src/components/section/index.css
+++ b/src/components/section/index.css
@@ -166,11 +166,11 @@
 /* Reserve page */
 .Section--07 {
   background: var(--colour-purpleDark);
-  /*min-height: 0;*/
 
   & .Section-title {
     font: 700 27px/34px var(--sans);
     letter-spacing: 0.1px;
+    margin-top: 12vh;
     max-width: 250px;
   }
 
